--- a/template/html.hbs
+++ b/template/html.hbs
@@ -5,11 +5,10 @@
     <title>{{ fontName }}</title>
 
     <style>
-
         body {
-            font-family: sans-serif;
+            font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Oxygen-Sans,Ubuntu,Cantarell,"Helvetica Neue",sans-serif;
             margin: 0;
-            padding: 10px 20px;
+            padding: 0;
             text-align: center;
         }
 
@@ -57,8 +56,9 @@
     <link rel="stylesheet" type="text/css" href="{{ htmlCssRelativePath }}" />
 </head>
 <body>
-
-    <h1>{{ fontName }}</h1>
+    <header>
+        {{ fontName }}
+    </header>
 
     {{# each names }}
 
